--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server.js",
+    "start": "npm run build && npm run server"
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
